# youcruit-tap-rawpostgresql

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_rawpostgresql/: client.py  tap.py
tap_rawpostgresql/tests/: __init__.py  test_core.py  test_postgres.py  test_sqlite.py
